<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context="com.loveeconomy.loveeconomy.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="215dp"
            android:layout_height="186dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/enter_first"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:background="@drawable/inp_field_inverse" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_last"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:background="@drawable/inp_field_inverse" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:textColor="#848484"
            android:textColorHint="#848484"
            android:background="@drawable/inp_field_inverse"/>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textColor="#848484"
            android:hint="@string/enter_pass"
            android:textColorHint="#848484"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:background="@drawable/inp_field_inverse" />

        <Button
            android:id="@+id/signUpbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/curve_btn_inverse"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:freezesText="false"
            android:hapticFeedbackEnabled="false"
            android:text="Register"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>

