<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#15215b"
    tools:context="com.loveeconomy.loveeconomy.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="215dp"
            android:layout_height="186dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFFFF"
            android:background="@drawable/inp_field"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/inp_field"
            android:ems="10"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:textColorHint="#FFFFFFFF" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:text="Forgot password?" />


        <Button
            android:id="@+id/signInbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/curve_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:cursorVisible="true"
            android:freezesText="false"
            android:hapticFeedbackEnabled="false"
            android:text="@string/login_btn"
            android:textColor="#1733cd" />

    </LinearLayout>
</ScrollView>

